[tool.poetry]
name = "note-followings-feed"
version = "0.1.0"
description = ""
authors = ["bulldra <bulldra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feedgen = "^1.0.0"
feedparser = "^6.0.11"
requests = "^2.31.0"
pytest = "^8.0.1"
flask = "^3.0.2"
functions-framework = "^3.5.0"
google-cloud-logging = "^3.9.0"
google-cloud-storage = "^2.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
